--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +18,11 @@
   "bugs": {
     "url": "https://github.com/sochima-ifedikwa/CSE341-ContactsAPI/issues"
   },
-  "homepage": "https://github.com/sochima-ifedikwa/CSE341-ContactsAPI#readme"
+  "homepage": "https://github.com/sochima-ifedikwa/CSE341-ContactsAPI#readme",
+  "dependencies": {
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
