Implement validation for contact ID and add input validation for contact creation

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongodb": "^6.19.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "eslint": "^9.35.0",
